--- a/FireworkRNSDKSample/android/app/src/main/res/xml/network_security_config.xml
+++ b/FireworkRNSDKSample/android/app/src/main/res/xml/network_security_config.xml
@@ -1,10 +1,10 @@
 <network-security-config>
-   <debug-overrides>
-     <trust-anchors>
-       <!-- Trust user added CAs while debuggable only -->
-       <certificates src="user" />
-     </trust-anchors>
-   </debug-overrides>
+  <base-config>
+    <trust-anchors>
+      <!-- Trust user added CAs while debuggable only -->
+      <certificates src="user" />
+    </trust-anchors>
+  </base-config>
   <domain-config cleartextTrafficPermitted="true">
     <domain includeSubdomains="true">localhost</domain>
   </domain-config>
