Update SDK to v1.0.0

--- a/FireworkRNSDKSample/android/app/src/main/res/xml/network_security_config.xml
+++ b/FireworkRNSDKSample/android/app/src/main/res/xml/network_security_config.xml
@@ -1,8 +1,8 @@
 <network-security-config>
   <base-config>
     <trust-anchors>
-      <!-- Trust user added CAs while debuggable only -->
       <certificates src="user" />
+      <certificates src="system"/>
     </trust-anchors>
   </base-config>
   <domain-config cleartextTrafficPermitted="true">
