--- a/FireworkRNSDKSample/android/app/src/main/res/values/styles.xml
+++ b/FireworkRNSDKSample/android/app/src/main/res/values/styles.xml
@@ -2,6 +2,9 @@
 
   <!-- Base application theme. -->
   <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <!-- Customize your theme here. -->
+    <item name="android:textColor">#000000</item>
+    <item name="android:editTextBackground">@drawable/edit_text</item>
   </style>
 
   <!--  Apply your feed image by "FWFeedViewImageStyle" style.-->
