--- a/FireworkRNSDKSample/android/app/src/main/res/values/styles.xml
+++ b/FireworkRNSDKSample/android/app/src/main/res/values/styles.xml
@@ -7,13 +7,15 @@
     <item name="android:editTextBackground">@drawable/edit_text</item>
   </style>
 
+  <!--Configure the style for the shopping cta button-->
   <style name="FwShoppingCtaButtonStyle" parent="FwShoppingCtaButtonParentStyle">
     <item name="android:backgroundTint">@color/fw_shopping__add_to_cart_btn</item>
     <item name="android:textColor">@color/fw__gnt_white</item>
     <item name="android:textSize">@dimen/fw__font_size_16</item>
   </style>
 
-  <style name="FwCtaButtonStyle" parent="FwCtaButtonParentStyle">
+  <!--Configure the style for the player cta button-->
+  <style name="FwCtaButtonStyle" parent="FwCtaButtonViewParentStyle">
     <item name="android:backgroundTint">@color/fw_cta_bg_bluelake</item>
     <item name="android:textColor">@color/white</item>
     <item name="android:fontFamily">sans-serif</item>
